# MsiController

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.forgejo/workflows/: ci.yaml  ci.yml
cmake/packaging/: BundleQtRuntime.cmake  PackageConfig.cmake
cmake/packaging/dkms/: Makefile  dkms.conf.in
cmake/packaging/docker/: ubuntu-22.04-qt6.11.1.Dockerfile
cmake/packaging/scripts/deb/: postinst.in  prerm.in
cmake/packaging/scripts/rpm/: postinstall.in  preuninstall.in
cmake/packaging/wrappers/: msicontroller-run.in
cmaketools/: CMakeToolsVersionFromGit.cmake  defaultlib.cmake  generate_product_version.cmake  lib_export.h.in
scripts/: build-packages-docker.sh  build-packages.sh  install-qt-aqt.sh
src/client/: .qmlls.ini  AppCard.qml  CMakeLists.txt  CpuPage.qml  CpuPerformanceGraph.qml  FanCurveCard.qml  GraphCard.qml  Main.qml  MetricTile.qml  OptionGroup.qml  Sensor.qml  TargetTemperatureCard.qml  ToggleTile.qml  cmake_uninstall.cmake.in  curveutils.cpp  curveutils.h  esproxy.cpp  esproxy.h  gpucpuperformancegraph.cpp  gpucpuperformancegraph.h  gpulinechart.cpp  gpulinechart.h  main.cpp  msi-control-center-autostart.desktop.in  msi-control-center.desktop.in  proxyparameter.cpp  proxyparameter.h  resources.qrc
src/helper/: CMakeLists.txt  cmake_uninstall.cmake.in  ecserviceabstract.h  struct.h
src/module/: CMakeLists.txt  cmake_uninstall.cmake.in  msiecmodule.c
src/service/: CMakeLists.txt  cmake_uninstall.cmake.in  cpucontrolparameter.cpp  cpucontrolparameter.h  cpufiles.cpp  cpufiles.h  cpuparameter.cpp  cpuparameter.h  ecservice.cpp  ecservice.h  fantargetcontroller.cpp  fantargetcontroller.h  iobuffer.cpp  iobuffer.h  ioparameter.cpp  ioparameter.h  ioparameterimpl.h  main.cpp  msi-ec-service.conf.in  msi-ec-service.service.in  parameter.cpp  parameter.h  resources.qrc  settings.ini  softwareparameter.cpp  softwareparameter.h
